--- a/index.html
+++ b/index.html
@@ -5,31 +5,192 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>repair-design-project</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-
-        </div>
-        <nav class="menu">
-
-        </nav>
-        <div class="contacts">
-
+    <header class="header">
+        <div class="container">
+            <div class="header__logo">
+                <h1 style="display: none">ic "repair design project"</h1>
+                <a href="#" class="header__logo__text uppercase">ic "repair design project"</a>
+            </div>
+            <nav class="header__nav">
+                <ul class="header__nav__menu uppercase">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">projects</a></li>
+                    <li><a href="#">measurement</a></li>
+                    <li><a href="#">team</a></li>
+                    <li><a href="#">reviews</a></li>
+                    <li><a href="#">contacts</a></li>
+                </ul>
+            </nav>
+            <div class="header__contacts">
+                <a href="tel:+7 (928) 768-32-39" class="header__contacts__telephone">+7 (928) 768-32-39</a>
+                <button class="header__contacts_btn uppercase">request a call</button>
+            </div>
         </div>
     </header>
     <aside class="aside">
-
+        <a href="#" class="aside__text uppercase">instagram</a>
     </aside>
     <section class="banner">
-        <div class="banner-text">
-
+        <div class="wrapper">
+            <div class="banner__text">
+                <p class="banner__text__name uppercase">
+                    Turnkey Repair in the city of <span class="city">Rostov-on-Don</span>
+                </p>
+                <p class="banner__text__info">
+                    Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work
+                </p>
+            </div>
+            <div class="banner__btns">
+                <button class="banner__btns__btn uppercase">calculate the cost</button>
+                <button class="banner__btns__btn uppercase">submit your application</button>
+            </div>
         </div>
-        <div class="banner-calculate"></div>
-        <div class="banner-submit"></div>
     </section>
-    section.slider>
+    <div class="scroll">
+        <a href="#"  class="scroll__item">
+                <p href="#" class="scroll__item__text uppercase">scroll down</p>
+                <img class="scroll__item__image" src="assets/images/icon_scroll.svg">
+        </a>
+    </div>
+    <section class="slider">
+        <div class="container">
+            <div class="slider__info">
+                <div class="slider__info__name">
+                    <p class="slider__info__name__project uppercase">completed projects</p>
+                    <p class="slider__info__name__text">
+                        Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction market we have made happy more than 1000 families
+                    </p>
+                </div>
+                <div class="slider__info__apartments__box">
+                    <div class="slider__info__apartments">
+                        <p class="slider__info__apartments__name uppercase">city:</p>
+                        <p class="slider__info__apartments__text">Rostov-on-Don LCD admiral</p>
+                    </div>
+                    <div class="slider__info__apartments">
+                        <p class="slider__info__apartments__name uppercase">apartment area:</p>
+                        <p class="slider__info__apartments__text">81 m2</p>
+                    </div>
+                    <div class="slider__info__apartments">
+                        <p class="slider__info__apartments__name uppercase">repair time:</p>
+                        <p class="slider__info__apartments__text">3.5 months</p>
+                    </div>
+                    <div class="slider__info__apartments">
+                        <p class="slider__info__apartments__name uppercase">repair cost:</p>
+                        <p class="slider__info__apartments__text">Upon request</p>
+                    </div>
+                </div>
+                <div class="slider__info__carousel">
+                    <div class="slider__info__carousel__arrow_left"></div>
+                    <div class="slider__info__carousel__circle"></div>
+                    <div class="slider__info__carousel__circle"></div>
+                    <div class="slider__info__carousel__circle"></div>
+                    <div class="slider__info__carousel__arrow_right"></div>
+                </div>
+            </div>
+            <div class="slider__apartments">
+                <nav class="slider__apartments__nav">
+                    <ul class="slider__apartments__nav__menu uppercase">
+                        <li><a href="#">rostov-on-don, admiral</a></li>
+                        <li><a href="#">sochi thieves</a></li>
+                        <li><a href="#">rostov-on-don patriotic</a></li>
+                    </ul>
+                </nav>
+                <div class="slider__apartments__image">
+                    <div class="slider__apartments__image__first"></div>
+                    <div class="slider__apartments__image__second"></div>
+                    <img class="slider__apartments__image__next" src="assets/images/icon_next.svg">
+                </div>
+            </div>
+        </div>
+        <div class="slider__icon">
+            <p class="slider__icon__text uppercase">online control</p>
+            <div class="slider__icon__cam"></div>
+        </div>
+    </section>
+    <iframe class="video" src="https://www.youtube.com/embed/Y8Q9ptCXzL0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section class="repair">
+        <div class="container">
+            <div class="repair__icon_line"></div>
+            <p class="repair__text">At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a link to the broadcast.</p>
+            <div class="repair__submit">
+                <p class="repair__submit__text">Name</p>
+                <p class="repair__submit__text">Phone</p>
+            </div>
+            <div class="repair__sub">
+                <input class="repair__sub__input" type="text" name="" id="" placeholder="What is your name:">
+                <input class="repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
+                <input class="repair__sub__btn uppercase" type="submit" value="submit">
+            </div>
+            <div class="repair__check">
+                <label class="mycheckbox">
+                    <input type="checkbox" class="mycheckbox__default" required>
+                    <div class="mycheckbox__new" required></div>
+                </label>
+                <p class="repair__check__text">I agree to the processing of personal data</p>
+            </div>
+            <div class="repair__types">
+                <p class="uppercase">types of repair</p>
+                <div class="repair__types__icon"></div>
+            </div>
+            <section class="price">
+                <div class="price__image">
+                    <img src="assets/images/image_left.png" class="price__image__slide"></img>
+                    <img src="assets/images/image_center.png" class="price__image__slide"></img>
+                    <img src="assets/images/image_right.png" class="price__image__slide"></img>
+                </div>
+                <div class="price__info">
+                    <div class="price__info__text">
+                        <p class="price__info__text__name">Redecorating</p>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <div class="price__info__text">
+                        <p class="price__info__text__name">Overhaul</p>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <div class="price__info__text">
+                        <p class="price__info__text__name">Designer Repair</p>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="price__btns">
+                    <button class="price__btns__cost uppercase">from 900 rub / m2</button>
+                    <button class="price__btns__cost uppercase">from 1800 rub / m2</button>
+                    <button class="price__btns__cost uppercase">from 4000 rub / m2</button>
+                </div>
+            </section>
+        </div>
+        
+    </section>
+    <section class="working">
+
+    </section>
     
 </body>
 </html>
