feat: create project-team boxes

--- a/index.html
+++ b/index.html
@@ -185,11 +185,186 @@
                     <button class="price__btns__cost uppercase">from 4000 rub / m2</button>
                 </div>
             </section>
+            <section class="amenities">
+                <div class="amenities__info">
+                    <div class="amenities__info__circle">
+                        <p>Our specialist will arrive for measurements per day contact, or appoint a date convenient for you</p>
+                        <p>Free metering</p>
+                        <p>Free consultation</p>
+                        <p>Get a cost estimate and the timing of your future repairs</p>
+                    </div>
+                    <div class="amenities__info__form">
+                        <p class="amenities__info__form__text">Leave a request for free departure of the measurer</p>
+                        <p class="amenities__info__form__name repair__submit__text">Name</p>
+                        <input class="amenities__info__form__input repair__sub__input" type="text" name="" id="" placeholder="What is your name:">                        
+                        <p class="amenities__info__form__name repair__submit__text">Phone</p>
+                        <input class="amenities__info__form__input repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
+                        <p class="amenities__info__form__name repair__submit__text">Email</p>
+                        <input class="amenities__info__form__input repair__sub__input" type="text" name="" id="" placeholder="Your email:">
+                        <div class="amenities__info__form__check">    
+                            <label class="mycheckbox">
+                                <input type="checkbox" class="mycheckbox__default" required>
+                                <div class="mycheckbox__new" required></div>
+                            </label>
+                            <p class="amenities__info__form__check__text">I agree to the processing of personal data</p>
+                        </div>
+                        <input class="amenities__info__form__btn repair__sub__btn uppercase" type="submit" value="Call the measurer">
+                    </div>
+                    <div class="amenities__save">
+                        <img src="assets/images/icon_pig.svg" class="amenities__save__icon"></img>
+                        <p class="amenities__save__text">Help save 10 - 20% of the cost of materials</p>
+                    </div>
+                </div>
+            </section>
         </div>
-        
+    </section>
+    <section class="styles">
+        <div class="styles__list">
+            <p class="styles__list__name uppercase">We realize your wildest fantasies</p>
+            <ul class="styles__list__text">
+                <li><a href="">American classic</a></li>
+                <li><a href="">Empire</a></li>
+                <li><a href="">Classical</a></li>
+                <li><a href="">Loft</a></li>
+                <li><a href="">Minimalism</a></li>
+                <li><a href="">Provence</a></li>
+                <li><a href="">Romanticism</a></li>
+                <li><a href="">Scandinavian style</a></li>
+                <li><a href="">Mediterranean style</a></li>
+                <li><a href="">High tech</a></li>
+                <li><a href="">Eclecticism</a></li>
+            </ul>
+        </div>
+        <div class="styles__images_first">
+            <img src="assets/images/styles_1.png" alt="">
+            <img src="assets/images/styles_2.png" alt="">
+        </div>
+        <div class="styles__images_second">
+            <img src="assets/images/styles_3.png" alt="">
+            <img src="assets/images/styles_4.png" alt="">
+        </div>
+    </section>
+    <section class="design">
+        <div class="design__head">
+            <div class="design__head__name">
+                <p class="design__head__name__text uppercase">Design project</p>
+                <div class="design__head__name__icon"></div>
+            </div>
+            <p class="design__head__text">Design project not only helps to make the repair of your apartment more modern, but also significantly reduces the cost of materials and reduces the time of repair work.</p>
+        </div>
+        <div class="container">
+            <div class="design__price price">
+                <div class="design__price__image price__image">
+                    <img src="assets/images/mini.png" class="design__price__image__slide price__image__slide"></img>
+                    <img src="assets/images/standart.png" class="design__price__image__slide price__image__slide"></img>
+                    <img src="assets/images/full.png" class="design__price__image__slide price__image__slide"></img>
+                </div>
+                <div class="design__price__info price__info">
+                    <div class="design__price__info__text price__info__text">
+                        <p class="design__price__info__text__name price__info__text__name">Mini</p>
+                        <ul>
+                            <li>Measurement drawing</li>
+                            <li>Redevelopment</li>
+                            <li>Layout of furniture</li>
+                            <li>Plumbing plan. equipment</li>
+                        </ul>
+                    </div>
+                    <div class="design__price__info__text price__info__text">
+                        <p class="design__price__info__text__name price__info__text__name">Standard</p>
+                        <ul>
+                            <li>Measurement drawing</li>
+                            <li>Redevelopment</li>
+                            <li>Layout of furniture</li>
+                            <li>Plan of ceilings</li>
+                            <li>Floor Plan</li>
+                            <li>Electricians plan</li>
+                            <li>Lighting plan</li>
+                        </ul>
+                    </div>
+                    <div class="design__price__info__text price__info__text">
+                        <p class="design__price__info__text__name price__info__text__name">Full</p>
+                        <ul>
+                            <li>Measurement drawing</li>
+                            <li>Redevelopment</li>
+                            <li>Layout of furniture</li>
+                            <li>Plan of ceilings</li>
+                            <li>Floor Plan</li>
+                            <li>Electricians plan</li>
+                            <li>Lighting plan</li>
+                            <li>Wall reamers</li>
+                            <li>3D visualization</li>
+                            <li>Bill of materials</li>
+                            <li>Departure for a selection of materials</li>
+                            <li>Furniture selection</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="design__price__btns price__btns">
+                    <button class="design__price__btns__cost price__btns__cost uppercase">150 rub / m2</button>
+                    <button class="design__price__btns__cost price__btns__cost uppercase">400 rub / m2</button>
+                    <button class="design__price__btns__cost price__btns__cost uppercase">900 rub / m2</button>
+                </div>
+            </div>    
+        </div>
     </section>
     <section class="working">
-
+        <div class="container">
+            <div class="working__slider">
+                <p class="working__slider__how uppercase">How we are working</p>
+                <p class="working__slider__name uppercase">6 steps to the goal</p>
+                <p class="working__slider__pages">1/6</p>
+                <p class="working__slider__text_name uppercase">Departure for measurements premises</p>
+                <p class="working__slider__text">After your call, we go to you to consult and measure the premises of your apartment. During our meeting, you can ask absolutely any number of questions. An appraiser-appraiser leaves to measure the room.</p>
+                <p class="working__slider__text">He will advise you on the issues of repair technology, apartment design, terms of repair of the apartment as a whole and its individual stages.</p>
+                <div class="working__slider__carousel slider__info__carousel">
+                    <div class="working__slider__carousel__arrow_left slider__info__carousel__arrow_left"></div>
+                    <div class="working__slider__carousel__circle slider__info__carousel__circle"></div>
+                    <div class="working__slider__carousel__circle slider__info__carousel__circle"></div>
+                    <div class="working__slider__carousel__circle slider__info__carousel__circle"></div>
+                    <div class="working__slider__carousel__circle slider__info__carousel__circle"></div>
+                    <div class="working__slider__carousel__circle slider__info__carousel__circle"></div>
+                    <div class="working__slider__carousel__circle slider__info__carousel__circle"></div>
+                    <div class="working__slider__carousel__arrow_right slider__info__carousel__arrow_right"></div>
+                </div>
+            </div>
+            <div class="working__pages">
+                <div class="working__pages__steps">
+                    <div class="working__pages__steps__stage">
+                        <a href="" class="working__pages__steps__stage__number">01</a>
+                        <p class="working__pages__steps__stage__text">Departure to room measurements</p>
+                    </div>
+                    <div class="working__pages__steps__stage">
+                        <a href="" class="working__pages__steps__stage__number">02</a>
+                        <p class="working__pages__steps__stage__text">Compilation estimates</p>
+                    </div>
+                    <div class="working__pages__steps__stage">
+                        <a href="" class="working__pages__steps__stage__number">03</a>
+                        <p class="working__pages__steps__stage__text">Development project design</p>
+                    </div>
+                    <div class="working__pages__steps__stage">
+                        <a href="" class="working__pages__steps__stage__number">04</a>
+                        <p class="working__pages__steps__stage__text">Purchasing Supplies</p>
+                    </div>
+                    <div class="working__pages__steps__stage">
+                        <a href="" class="working__pages__steps__stage__number">05</a>
+                        <p class="working__pages__steps__stage__text">Repair finishing work</p>
+                    </div>
+                    <div class="working__pages__steps__stage">
+                        <a href="" class="working__pages__steps__stage__number">06</a>
+                        <p class="working__pages__steps__stage__text">Приемка-сдача работ</p>
+                    </div>
+                </div>
+                <div class="working__pages__image"></div>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="team__head">
+            <p class="team__head__name uppercase">our team</p>
+            <div class="team__head__icon"></div>
+            <p class="team__head__text">Our team has helped to become happier for more than 500 families and we are not going to stop</p>
+        </div>
+        <div class="team__people"></div>
     </section>
     
 </body>
