--- a/index.html
+++ b/index.html
@@ -364,7 +364,44 @@
             <div class="team__head__icon"></div>
             <p class="team__head__text">Our team has helped to become happier for more than 500 families and we are not going to stop</p>
         </div>
-        <div class="team__people"></div>
+        <div class="team__people price">
+            <div class="container">
+                <div class="team__people__icons">
+                    <img src="assets/images/icon_person1.svg" alt="" class="team__people__icons__image">
+                    <img src="assets/images/icon_person2.svg" alt="" class="team__people__icons__image">
+                    <img src="assets/images/icon_person_3.svg" alt="" class="team__people__icons__image">
+                </div>
+                <div class="team__people__image price__image">
+                    <img src="assets/images/person1.png" class="team__people__image__slide price__image__slide"></img>
+                    <img src="assets/images/person2.png" class="team__people__image__slide price__image__slide"></img>
+                    <img src="assets/images/person3.png" class="team__people__image__slide price__image__slide"></img>
+                </div>
+                <div class="team__people__info price__info">
+                    <div class="team__people__info__text price__info__text">
+                        <p class="team__people__info__text__name price__info__text__name">Dmitry Tulyakov</p>
+                        <p class="team__people__info__text__speciality">Project manager</p>
+                    </div>
+                    <div class="team__people__info__text price__info__text">
+                        <p class="team__people__info__text__name price__info__text__name">Larisa Kotlyarova</p>
+                        <p class="team__people__info__text__speciality">Designer</p>
+                    </div>
+                    <div class="team__people__info__text price__info__text">
+                        <p class="team__people__info__text__name price__info__text__name">Alexey Efimov</p>
+                        <p class="team__people__info__text__speciality">Foreman</p>
+                    </div>
+                </div>
+                <div class="team__people__btns price__btns">
+                    <button class="team__people__btns__stage price__btns__cost uppercase">Work experience 8 years</button>
+                    <button class="team__people__btns__stage price__btns__cost uppercase">Work experience 6 years</button>
+                    <button class="team__people__btns__stage price__btns__cost uppercase">Work experience 12 years</button>
+                </div>
+            </div>
+        </div>
+        <div class="team__icon__line"></div>
+        <div class="team_info">
+            <p class="team__info__text">Each employee of our company is a qualified full-time specialist with work experience of 6 years.</p>
+            <p class="team__info__text">We do not have laborers and guest workers, each employee carries out work corresponding to his specialty.</p>
+        </div>
     </section>
     
 </body>
