--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>repair-design-project</title>
 </head>
-<body>
+<body class="body">
     <header class="header">
         <div class="container">
             <div class="header__logo">
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div class="banner__btns">
-                <button class="banner__btns__btn uppercase">calculate the cost</button>
+                <button class="banner__btns__btn uppercase main">calculate the cost</button>
                 <button class="banner__btns__btn uppercase">submit your application</button>
             </div>
         </div>
@@ -102,6 +102,7 @@
                     <div class="slider__apartments__image__first"></div>
                     <div class="slider__apartments__image__second"></div>
                     <img class="slider__apartments__image__next" src="assets/images/icon_next.svg">
+                    <img class="slider__apartments__image__next" src="assets/images/icon_next.svg">
                 </div>
             </div>
         </div>
@@ -121,6 +122,9 @@
             </div>
             <div class="repair__sub">
                 <input class="repair__sub__input" type="text" name="" id="" placeholder="What is your name:">
+                <div class="repair__submit">
+                    <p class="repair__submit__text">Phone</p>
+                </div>
                 <input class="repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
                 <input class="repair__sub__btn uppercase" type="submit" value="submit">
             </div>
@@ -235,6 +239,10 @@
                 <li><a href="">Eclecticism</a></li>
             </ul>
         </div>
+        <div class="styles__images_mobile">
+            <img class="styles__images_mobile__next slider__apartments__image__next" src="assets/images/icon_next.svg">
+            <img class="styles__images_mobile__next slider__apartments__image__next" src="assets/images/icon_next.svg">
+        </div>
         <div class="styles__images_first">
             <img src="assets/images/styles_1.png" alt="">
             <img src="assets/images/styles_2.png" alt="">
@@ -296,6 +304,18 @@
                                 <li>Bill of materials</li>
                                 <li>Departure for a selection of materials</li>
                                 <li>Furniture selection</li>
+                            </ul>
+                        </div>
+                        <div class="design__price__info__text price__info__text">
+                            <p class="design__price__info__text__name price__info__text__name">Full</p>
+                            <ul>
+                                <li>Measurement drawing</li>
+                                <li>Redevelopment</li>
+                                <li>Layout of furniture</li>
+                                <li>Plan of ceilings</li>
+                                <li>Floor Plan</li>
+                                <li>Electricians plan</li>
+                                <li>Lighting plan...</li>
                             </ul>
                         </div>
                     </div>
@@ -471,6 +491,9 @@
         </div>
         <div class="question__sub repair__sub">
             <input class="question__sub__input repair__sub__input" type="text" name="" id="" placeholder="What is your name:">
+            <div class="question_submit repair__submit">
+                <p class="question_submit__text repair__submit__text">Phone</p>
+            </div>
             <input class="question__sub__input repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
         </div>
         <div class="question_submit repair__submit">
@@ -489,7 +512,7 @@
         <input class="question__sub__btn repair__sub__btn uppercase" type="submit" value="submit">
     </div>
     <section class="geo">
-        <p class="geo__name uppercase">Rostov-on-Don, Nansen St., 239 Shopping Center Decorum Tel +7 (928) 768 32 29</p>
+        <p class="geo__name uppercase">Rostov-on-Don, Nansen St. 239 Shopping Center Decorum Tel +7 (928) 768 32 29</p>
         <div class="geo__icons">
             <img src="assets/images/icon_mail.svg" alt="" class="geo__icons__img">
             <img src="assets/images/icon_inst.svg" alt="" class="geo__icons__img">
