fix: edited HTML to execute validator

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
             <div class="header__contacts">
-                <a href="tel:+7 (928) 768-32-39" class="header__contacts__telephone">+7 (928) 768-32-39</a>
+                <a href="tel:+7(928)768-32-39" class="header__contacts__telephone">+7 (928) 768-32-39</a>
                 <button class="header__contacts_btn uppercase">request a call</button>
             </div>
         </div>
@@ -36,9 +36,9 @@
     <section class="banner">
         <div class="wrapper">
             <div class="banner__text">
-                <p class="banner__text__name uppercase">
+                <h2 class="banner__text__name uppercase">
                     Turnkey Repair in the city of <span class="city">Rostov-on-Don</span>
-                </p>
+                </h2>
                 <p class="banner__text__info">
                     Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work
                 </p>
@@ -50,16 +50,16 @@
         </div>
     </section>
     <div class="scroll">
-        <a href=""  class="scroll__item">
-                <p href="" class="scroll__item__text uppercase">scroll down</p>
-                <img class="scroll__item__image" src="assets/images/icon_scroll.svg">
+        <a href="" class="scroll__item">
+                <p class="scroll__item__text uppercase">scroll down</p>
+                <img class="scroll__item__image" src="assets/images/icon_scroll.svg" alt="">
         </a>
     </div>
     <section class="slider">
         <div class="container">
             <div class="slider__info">
                 <div class="slider__info__name">
-                    <p class="slider__info__name__project uppercase">completed projects</p>
+                    <h2 class="slider__info__name__project uppercase">completed projects</h2>
                     <p class="slider__info__name__text">
                         Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction market we have made happy more than 1000 families
                     </p>
@@ -101,8 +101,8 @@
                 <div class="slider__apartments__image">
                     <div class="slider__apartments__image__first"></div>
                     <div class="slider__apartments__image__second"></div>
-                    <img class="slider__apartments__image__next" src="assets/images/icon_next.svg">
-                    <img class="slider__apartments__image__next" src="assets/images/icon_next.svg">
+                    <img class="slider__apartments__image__next" src="assets/images/icon_next.svg" alt="">
+                    <img class="slider__apartments__image__next" src="assets/images/icon_next.svg" alt="">
                 </div>
             </div>
         </div>
@@ -111,27 +111,27 @@
             <div class="slider__icon__cam"></div>
         </div>
     </section>
-    <iframe class="video" src="https://www.youtube.com/embed/Y8Q9ptCXzL0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="video" src="https://www.youtube.com/embed/Y8Q9ptCXzL0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <section class="repair">
         <div class="container">
             <div class="repair__icon_line"></div>
             <p class="repair__text">At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a link to the broadcast.</p>
             <div class="repair__submit">
-                <p class="repair__submit__text">Name</p>
-                <p class="repair__submit__text">Phone</p>
+                <h2 class="repair__submit__text">Name</h2>
+                <h2 class="repair__submit__text">Phone</h2>
             </div>
             <div class="repair__sub">
-                <input class="repair__sub__input" type="text" name="" id="" placeholder="What is your name:">
+                <input class="repair__sub__input" type="text" name="submit" placeholder="What is your name:">
                 <div class="repair__submit">
                     <p class="repair__submit__text">Phone</p>
                 </div>
-                <input class="repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
+                <input class="repair__sub__input" type="text" name="submit" placeholder="Your phone number:">
                 <input class="repair__sub__btn uppercase" type="submit" value="submit">
             </div>
             <div class="repair__check">
                 <label class="mycheckbox">
                     <input type="checkbox" class="mycheckbox__default" required>
-                    <div class="mycheckbox__new" required></div>
+                    <span class="mycheckbox__new"></span>
                 </label>
                 <p class="repair__check__text">I agree to the processing of personal data</p>
             </div>
@@ -141,13 +141,13 @@
             </div>
             <section class="price">
                 <div class="price__image">
-                    <img src="assets/images/image_left.png" class="price__image__slide"></img>
-                    <img src="assets/images/image_center.png" class="price__image__slide"></img>
-                    <img src="assets/images/image_right.png" class="price__image__slide"></img>
+                    <img src="assets/images/image_left.png" class="price__image__slide" alt="">
+                    <img src="assets/images/image_center.png" class="price__image__slide" alt="">
+                    <img src="assets/images/image_right.png" class="price__image__slide" alt="">
                 </div>
                 <div class="price__info">
                     <div class="price__info__text">
-                        <p class="price__info__text__name">Redecorating</p>
+                        <h2 class="price__info__text__name">Redecorating</h2>
                         <ul>
                             <li>Dismantling of old coatings</li>
                             <li>Wallpapering</li>
@@ -159,7 +159,7 @@
                         </ul>
                     </div>
                     <div class="price__info__text">
-                        <p class="price__info__text__name">Overhaul</p>
+                        <h2 class="price__info__text__name">Overhaul</h2>
                         <ul>
                             <li>Dismantling of old coatings</li>
                             <li>Wallpapering</li>
@@ -171,7 +171,7 @@
                         </ul>
                     </div>
                     <div class="price__info__text">
-                        <p class="price__info__text__name">Designer Repair</p>
+                        <h2 class="price__info__text__name">Designer Repair</h2>
                         <ul>
                             <li>Dismantling of old coatings</li>
                             <li>Wallpapering</li>
@@ -198,24 +198,24 @@
                         <p>Get a cost estimate and the timing of your future repairs</p>
                     </div>
                     <div class="amenities__info__form">
-                        <p class="amenities__info__form__text">Leave a request for free departure of the measurer</p>
+                        <h2 class="amenities__info__form__text">Leave a request for free departure of the measurer</h2>
                         <p class="amenities__info__form__name repair__submit__text">Name</p>
-                        <input class="amenities__info__form__input repair__sub__input" type="text" name="" id="" placeholder="What is your name:">                        
+                        <input class="amenities__info__form__input repair__sub__input" type="text" name="form__input" placeholder="What is your name:">                        
                         <p class="amenities__info__form__name repair__submit__text">Phone</p>
-                        <input class="amenities__info__form__input repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
+                        <input class="amenities__info__form__input repair__sub__input" type="text" name="form__input" placeholder="Your phone number:">
                         <p class="amenities__info__form__name repair__submit__text">Email</p>
-                        <input class="amenities__info__form__input repair__sub__input" type="text" name="" id="" placeholder="Your email:">
+                        <input class="amenities__info__form__input repair__sub__input" type="text" name="form__input" placeholder="Your email:">
                         <div class="amenities__info__form__check">    
                             <label class="mycheckbox">
                                 <input type="checkbox" class="mycheckbox__default" required>
-                                <div class="mycheckbox__new" required></div>
+                                <span class="mycheckbox__new"></span>
                             </label>
                             <p class="amenities__info__form__check__text">I agree to the processing of personal data</p>
                         </div>
                         <input class="amenities__info__form__btn repair__sub__btn uppercase" type="submit" value="Call the measurer">
                     </div>
                     <div class="amenities__save">
-                        <img src="assets/images/icon_pig.svg" class="amenities__save__icon"></img>
+                        <img src="assets/images/icon_pig.svg" class="amenities__save__icon" alt="">
                         <p class="amenities__save__text">Help save 10 - 20% of the cost of materials</p>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
     </section>
     <section class="styles">
         <div class="styles__list">
-            <p class="styles__list__name uppercase">We realize your wildest fantasies</p>
+            <h2 class="styles__list__name uppercase">We realize your wildest fantasies</h2>
             <ul class="styles__list__text">
                 <li><a href="">American classic</a></li>
                 <li><a href="">Empire</a></li>
@@ -240,8 +240,8 @@
             </ul>
         </div>
         <div class="styles__images_mobile">
-            <img class="styles__images_mobile__next slider__apartments__image__next" src="assets/images/icon_next.svg">
-            <img class="styles__images_mobile__next slider__apartments__image__next" src="assets/images/icon_next.svg">
+            <img class="styles__images_mobile__next slider__apartments__image__next" src="assets/images/icon_next.svg" alt="">
+            <img class="styles__images_mobile__next slider__apartments__image__next" src="assets/images/icon_next.svg" alt="">
         </div>
         <div class="styles__images_first">
             <img src="assets/images/styles_1.png" alt="">
@@ -256,16 +256,16 @@
                 <div class="container">
             <div class="design__head">
                 <div class="design__head__name">
-                    <p class="design__head__name__text uppercase">Design project</p>
+                    <h2 class="design__head__name__text uppercase">Design project</h2>
                     <div class="design__head__name__icon"></div>
                 </div>
                 <p class="design__head__text">Design project not only helps to make the repair of your apartment more modern, but also significantly reduces the cost of materials and reduces the time of repair work.</p>
             </div>
                 <div class="design__price price">
                     <div class="design__price__image price__image">
-                        <img src="assets/images/mini.png" class="design__price__image__slide price__image__slide"></img>
-                        <img src="assets/images/standart.png" class="design__price__image__slide price__image__slide"></img>
-                        <img src="assets/images/full.png" class="design__price__image__slide price__image__slide"></img>
+                        <img src="assets/images/mini.png" class="design__price__image__slide price__image__slide" alt="">
+                        <img src="assets/images/standart.png" class="design__price__image__slide price__image__slide" alt="">
+                        <img src="assets/images/full.png" class="design__price__image__slide price__image__slide" alt="">
                     </div>
                     <div class="design__price__info price__info">
                         <div class="design__price__info__text price__info__text">
@@ -330,7 +330,7 @@
         <section class="working">
             <div class="container">
                 <div class="working__slider">
-                    <p class="working__slider__how uppercase">How we are working</p>
+                    <h2 class="working__slider__how uppercase">How we are working</h2>
                     <p class="working__slider__name uppercase">6 steps to the goal</p>
                     <p class="working__slider__pages">1/6</p>
                     <p class="working__slider__text_name uppercase">Departure for measurements premises</p>
@@ -380,7 +380,7 @@
         </section>
     <section class="team">
         <div class="team__head">
-            <p class="team__head__name uppercase">our team</p>
+            <h2 class="team__head__name uppercase">our team</h2>
             <div class="team__head__icon"></div>
             <p class="team__head__text">Our team has helped to become happier for more than 500 families and we are not going to stop</p>
         </div>
@@ -392,9 +392,9 @@
                     <img src="assets/images/icon_person_3.svg" alt="" class="team__people__icons__image">
                 </div>
                 <div class="team__people__image price__image">
-                    <img src="assets/images/person1.png" class="team__people__image__slide price__image__slide"></img>
-                    <img src="assets/images/person2.png" class="team__people__image__slide price__image__slide"></img>
-                    <img src="assets/images/person3.png" class="team__people__image__slide price__image__slide"></img>
+                    <img src="assets/images/person1.png" alt="" class="team__people__image__slide price__image__slide">
+                    <img src="assets/images/person2.png" alt="" class="team__people__image__slide price__image__slide">
+                    <img src="assets/images/person3.png" alt="" class="team__people__image__slide price__image__slide">
                 </div>
                 <div class="team__people__info price__info">
                     <div class="team__people__info__text price__info__text">
@@ -427,7 +427,7 @@
         <div class="container">
             <div class="clients__head design__head">
                 <div class="clients__head__name design__head__name">
-                    <p class="clients__head__name__text design__head__name__text uppercase">Our clients</p>
+                    <h2 class="clients__head__name__text design__head__name__text uppercase">Our clients</h2>
                     <div class="clients__head__name__icon design__head__name__icon"></div>
                 </div>
                 <p class="clients__head__text design__head__text">80% of our customers recommend us to their friends and family.</p>
@@ -490,35 +490,35 @@
             <p class="question_submit__text repair__submit__text">Phone</p>
         </div>
         <div class="question__sub repair__sub">
-            <input class="question__sub__input repair__sub__input" type="text" name="" id="" placeholder="What is your name:">
+            <input class="question__sub__input repair__sub__input" type="text" name="sub__input" placeholder="What is your name:">
             <div class="question_submit repair__submit">
                 <p class="question_submit__text repair__submit__text">Phone</p>
             </div>
-            <input class="question__sub__input repair__sub__input" type="text" name="" id="" placeholder="Your phone number:">
+            <input class="question__sub__input repair__sub__input" type="text" name="sub__input" placeholder="Your phone number:">
         </div>
         <div class="question_submit repair__submit">
             <p class="question_submit__text1 repair__submit__text">Question</p>
         </div>
         <div class="question__sub repair__sub">
-            <input class="question__sub__input repair__sub__input" type="text" name="" id="" placeholder="I want to know:">
+            <input class="question__sub__input repair__sub__input" type="text" name="sub__input" placeholder="I want to know:">
         </div>
         <div class="question__check repair__check">
             <label class="mycheckbox">
                 <input type="checkbox" class="mycheckbox__default" required>
-                <div class="mycheckbox__new" required></div>
+                <span class="mycheckbox__new"></span>
             </label>
             <p class="question__check__text repair__check__text">I agree to the processing of personal data</p>
         </div>
         <input class="question__sub__btn repair__sub__btn uppercase" type="submit" value="submit">
     </div>
     <section class="geo">
-        <p class="geo__name uppercase">Rostov-on-Don, Nansen St. 239 Shopping Center Decorum Tel +7 (928) 768 32 29</p>
+        <h2 class="geo__name uppercase">Rostov-on-Don, Nansen St. 239 Shopping Center Decorum Tel +7 (928) 768 32 29</h2>
         <div class="geo__icons">
             <img src="assets/images/icon_mail.svg" alt="" class="geo__icons__img">
             <img src="assets/images/icon_inst.svg" alt="" class="geo__icons__img">
         </div>
         <div class="geo__map">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aaa1de5878a898e6dddb3020cd3fb498ae51ea869d2c5027121540b6736e4df87&amp;source=constructor" width="925" height="465" frameborder="0" class="geo__map__iframe"></iframe>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aaa1de5878a898e6dddb3020cd3fb498ae51ea869d2c5027121540b6736e4df87&amp;source=constructor" width="925" height="465" class="geo__map__iframe"></iframe>
         </div>
     </section>
     <footer class="footer header">
@@ -537,7 +537,7 @@
                 </ul>
             </nav>
             <div class="footer__contacts header__contacts">
-                <a href="tel:+7 (928) 768-32-39" class="footer__contacts__telephone header__contacts__telephone">+7 (928) 768-32-39</a>
+                <a href="tel:+7(928)768-32-39" class="footer__contacts__telephone header__contacts__telephone">+7 (928) 768-32-39</a>
                 <button class="footer__contacts_btn header__contacts_btn uppercase">request a call</button>
             </div>
         </div>
