--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>repair-design-project</title>
 </head>
-<body class="body">
+<body>
     <header class="header">
         <div class="container">
             <div class="header__logo">
@@ -50,7 +50,7 @@
         </div>
     </section>
     <div class="scroll">
-        <a href="" class="scroll__item">
+        <a href="#footer" class="scroll__item">
                 <p class="scroll__item__text uppercase">scroll down</p>
                 <img class="scroll__item__image" src="assets/images/icon_scroll.svg" alt="">
         </a>
@@ -537,7 +537,7 @@
                 </ul>
             </nav>
             <div class="footer__contacts header__contacts">
-                <a href="tel:+7(928)768-32-39" class="footer__contacts__telephone header__contacts__telephone">+7 (928) 768-32-39</a>
+                <a id="footer" href="tel:+7(928)768-32-39" class="footer__contacts__telephone header__contacts__telephone">+7 (928) 768-32-39</a>
                 <button class="footer__contacts_btn header__contacts_btn uppercase">request a call</button>
             </div>
         </div>
